# archspec-python

./: .gitignore  .gitmodules  README.md  pyproject.toml  tox.ini
.github/workflows/: unit_tests.yml
archspec/: __init__.py
archspec/cpu/: __init__.py  alias.py  detect.py  microarchitecture.py  schema.py
tests/: test_archspec.py  test_cpu.py
