[tool.poetry]
name = "archspec"
version = "0.1.0"
description = ""
authors = ["Massimiliano Culpo <massimiliano.culpo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
six = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
